# case-crafter

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/: case_crafter_prd.md  cross-platform-build.md  database-migrations.md  database-models.md  (+2 more)
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  case-crafter.desktop  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: case_study_generator.rs  commands.rs  config.rs  errors.rs  mod.rs  model_config.rs  models.rs  prompts.rs  question_generator.rs
src-tauri/src/ai/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/assessment/: commands.rs  mod.rs  models.rs  repository.rs  session.rs  workflow.rs
src-tauri/src/backup/: commands.rs  mod.rs  scheduler.rs
src-tauri/src/case_study/: commands.rs  manager.rs  mod.rs  models.rs  repository.rs  search.rs  version_control.rs
src-tauri/src/config/: commands.rs  conditional.rs  mod.rs  models.rs  repository.rs  schema.rs  validation.rs
src-tauri/src/database/: ai_config_repository.rs  connection.rs  encrypted_repositories.rs  migrations.rs  mod.rs  models.rs  prompt_template_repository.rs  repositories.rs  tests.rs  validation.rs
src-tauri/src/database/migrations/: 006_ai_configurations.sql  009_create_prompt_templates.sql  011_assessment_workflows.sql  012_configuration_system.sql
src-tauri/src/database/seeds/: commands.rs  mod.rs  sample_data.rs
src-tauri/src/encryption/: commands.rs  mod.rs
(+78 files in other folders)
