[package]
name = "case-crafter"
version = "0.1.0"
description = "An intelligent case study generator for educational purposes"
authors = ["Case Crafter Team <team@casecrafter.dev>"]
license = "MIT"
repository = "https://github.com/michael-borck/case-crafter"
homepage = "https://github.com/michael-borck/case-crafter"
documentation = "https://github.com/michael-borck/case-crafter#readme"
keywords = ["education", "case-study", "ai", "learning", "desktop"]
categories = ["education"]
edition = "2021"
default-run = "case-crafter"

[[bin]]
name = "case-crafter"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
md5 = "0.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
